<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToBy</string>
    <string name="no_data">No data available</string>

    <string name="action_edit">Edit list</string>
    <string name="action_complete">Complete list</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="title_activity_shopping_list_detail">List Detail</string>

    <string name="list_name_hint">List name</string>
    <string name="shop_name_hint">Shop name</string>
    <string name="shop_hint">Shop</string>
    <string name="shop_category_hint">Shop category</string>
    <string name="dismiss_btn">Dismiss</string>
    <string name="save_product_btn">Add item</string>
    <string name="save_shop_btn">Save shop</string>
    <string name="item_name_hint">Item name</string>
    <string name="item_amount_hint">Item amount</string>
    <string name="item_unit_hint">Amount unit</string>

    <string name="list_no_name">List with no name created</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="hello_world">Hello world!</string>

</resources>
