<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:minWidth="@dimen/min_width_dialog"
              android:orientation="vertical"
              android:paddingLeft="@dimen/padding"
              android:paddingRight="@dimen/padding"
              android:paddingTop="@dimen/small_padding"
              android:paddingBottom="@dimen/small_padding">

    <EditText
        android:id="@+id/shop_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shop_name_hint"
        android:gravity="center"/>

    <EditText
        android:id="@+id/shop_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shop_category_hint"
        android:gravity="center"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/padding">

        <Button
            android:id="@+id/dismiss_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dismiss_btn"
            style="?android:buttonBarButtonStyle"/>

        <Button
            android:id="@+id/submit_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_shop_btn"
            style="?android:buttonBarButtonStyle"
            android:layout_toRightOf="@id/dismiss_shop"/>
    </RelativeLayout>

</LinearLayout>