<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding">

    <EditText
        android:id="@+id/shopping_list_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/list_name_hint"
        android:gravity="center"/>

    <EditText
        android:id="@+id/shopping_list_shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shop_hint"
        android:gravity="center"
        android:layout_below="@id/shopping_list_name"/>

    <EditText
        android:id="@+id/shopping_list_shop_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shop_category_hint"
        android:gravity="center"
        android:layout_below="@id/shopping_list_shop"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true">

        <Button
            android:id="@+id/dismiss_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dismiss_btn"
            style="?android:buttonBarButtonStyle"/>

        <Button
            android:id="@+id/submit_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_btn"
            style="?android:buttonBarButtonStyle"
            android:layout_toRightOf="@id/dismiss_list"/>
    </RelativeLayout>

</RelativeLayout>