<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:minWidth="@dimen/min_width_dialog"
              android:orientation="vertical"
              android:paddingLeft="@dimen/padding"
              android:paddingRight="@dimen/padding"
              android:paddingTop="@dimen/small_padding"
              android:paddingBottom="@dimen/small_padding">

    <EditText
        android:id="@+id/shopping_list_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/list_name_hint"
        android:gravity="center"/>

    <Spinner
        android:id="@+id/shopping_list_shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shop_hint"
        android:gravity="center"/>

    <Spinner
        android:id="@+id/shopping_list_shop_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shop_category_hint"
        android:gravity="center"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/padding">

        <Button
            android:id="@+id/dismiss_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dismiss_btn"
            android:layout_marginRight="@dimen/padding"
            style="@style/TransparentButton"/>

        <Button
            android:id="@+id/submit_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_list_btn"
            style="@style/FormButton"
            android:layout_toRightOf="@id/dismiss_list"/>
    </RelativeLayout>

</LinearLayout>