<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:minWidth="@dimen/min_width_dialog"
              android:orientation="vertical"
              android:paddingLeft="@dimen/padding"
              android:paddingRight="@dimen/padding"
              android:paddingTop="@dimen/small_padding"
              android:paddingBottom="@dimen/small_padding">

    <EditText
        android:id="@+id/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_name_hint"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/item_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            android:hint="@string/item_amount_hint"
            android:inputType="number"
            android:gravity="center"/>

        <Spinner
            android:id="@+id/item_amount_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/padding">

        <Button
            android:id="@+id/dismiss_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dismiss_btn"
            android:layout_marginRight="@dimen/padding"
            style="@style/TransparentButton"/>

        <Button
            android:id="@+id/submit_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_product_btn"
            style="@style/FormButton"
            android:layout_toRightOf="@id/dismiss_item"/>
    </RelativeLayout>

</LinearLayout>